# coin-test

./: .buildinfo  .flake8  .gitignore  .nox_pyright_config.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  gettingstarted.html  index.html  installing.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js
.doctrees/: environment.pickle  gettingstarted.doctree  index.doctree  installing.doctree  reference.doctree
.doctrees/userguide/: backtest.doctree  data.doctree  report.doctree  strategies.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  documentation.yml  pypi.yml  tests.yml
_sources/: index.rst.txt
_sources/userguide/: backtest.rst.txt  report.rst.txt  strategies.rst.txt
docs/: conf.py  gettingstarted.rst  index.rst  installing.rst  reference.rst
docs/userguide/: backtest.rst  data.rst  datagen.rst  strategies.rst
src/coin_test/: __init__.py
src/coin_test/analysis/: __init__.py  build_datapane.py  data_processing.py  graphs.py  tables.py  tear_sheet.py  utils.py  viz.py
src/coin_test/backtest/: __init__.py  backtest_results.py  backtest_summary.py  market.py  portfolio.py  scheduled_strategy.py  simulator.py  strategy.py  trade.py  trade_request.py
tests/: conftest.py  test_version.py
tests/analysis/: conftest.py  test_datapane.py  test_graphs.py  test_tables.py  test_tear_sheet.py
tests/assets/: eth_usdc_1h_9_28.csv  simple.csv
tests/backtest/: conftest.py  test_backtest_results.py  test_market.py  test_portfolio.py  test_simulator.py  test_strategy.py  test_trade.py  test_trade_request.py
tests/data/: test_binance_data_download.py  test_composer.py  test_datasaver.py  test_dataset.py  test_dataset_generator.py  test_datasets.py  test_loaders.py  test_metadata.py  test_processors.py
tests/orchestration/: test_orchestration.py
tests/util/: test_money.py  test_ticker.py
userguide/: backtest.html  data.html  report.html  strategies.html
(+32 files in other folders)
