[tool.poetry]
name = "coin-test"
version = "0.1.0"
description = "Robust and rigorous backtesting framework for cryptocurrencies."
authors = ["Eamon Ito-Fisher <eamon@itofisher.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "coin_test", from = "src"}]
repository = "https://github.com/coin-test/coin-test"
keywords = ["cryptocurrency", "backtesting"]

[tool.poetry.dependencies]
python = "^3.10 <3.11"
pandas = "^1.5.0"
croniter = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-import-order = "^0.18.1"
pyright = "^1.1.273"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
codecov = "^2.1.12"
data-science-types = "^0.2.23"
pandas-stubs = "^1.5.0.221012"

[tool.pytest.ini_options]
markers = [
    "e2e: mark as end-to-end test.",
    "exclude_typeguard: mark tests that intentionally have bad types",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["coin_test"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pyright]
include = ["src", "tests"]
stubPath = ""
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
